# file_organizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile  config.ini  extensions.c  file_utils.c  hashmap_services.c  include.h  install.sh  main.c  mingw-toolchain.cmake  testrun
src/: config.c  file_utils.c  hashmap_services.c  include.h  main.c
test/Code/: main.c
